[tool.poetry]
name = "cda-api"
version = "0.1.0"
description = ""
authors = ["tanner-coon-bh <tanner.coon@bluehalo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.113.0"
python-dotenv = "^1.0.1"
SQLAlchemy = "^2.0.34"
pytest = "^8.3.2"
psycopg2-binary = "^2.9.9"
sqlparse = "^0.5.1"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
